--- a/.devcontainer/argocd-nodeport.yaml
+++ b/.devcontainer/argocd-nodeport.yaml
@@ -7,12 +7,10 @@ metadata:
     app.kubernetes.io/part-of: argocd
   name: argocd-server-nodeport
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: http
     port: 80
     protocol: TCP
-    targetPort: 8080
-    nodePort: 30100
   selector:
     app.kubernetes.io/name: argocd-server
