--- a/gitops/manifests/otel-collector/deploy.yaml
+++ b/gitops/manifests/otel-collector/deploy.yaml
@@ -61,14 +61,13 @@ spec:
       port: 4317
       protocol: TCP
       targetPort: 4317
-      nodePort: 30080
     - name: metrics # Default endpoint for metrics.
       port: 8889
       protocol: TCP
       targetPort: 8889
   selector:
     component: otel-collector
-  type: NodePort
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
