--- a/gitops/manifests/prometheus-grafana/grafana-nodeport.yaml
+++ b/gitops/manifests/prometheus-grafana/grafana-nodeport.yaml
@@ -10,15 +10,13 @@ metadata:
   name: grafana-nodeport
   namespace: monitoring
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: http
     port: 3000
     protocol: TCP
     targetPort: http
-    nodePort: 30101
   selector:
     app.kubernetes.io/component: grafana
     app.kubernetes.io/name: grafana
     app.kubernetes.io/part-of: kube-prometheus
-  sessionAffinity: None
