--- a/gitops/manifests/prometheus-grafana/prometheus-ingress.yaml
+++ b/gitops/manifests/prometheus-grafana/prometheus-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: prometheus.192.168.64.14.nip.io
+  - host: prometheus.{{.ingress_host}}
     http:
       paths:
       - path: /
