--- a/gitops/applications/argo-config.yaml
+++ b/gitops/applications/argo-config.yaml
@@ -1,35 +1,42 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "-1"
   name: argo-config
   namespace: argocd
 spec:
-  source:
-    repoURL: 'https://github.com/aledbf/progressivedelivery-masterclass.git'
-    targetRevision: main
-    path: "gitops/manifests/argo-config"
-  destination:
-    namespace: argocd
-    server: 'https://kubernetes.default.svc'
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    retry:
-      limit: 5
-      backoff:
-        duration: 5s
-        maxDuration: 3m0s
-        factor: 2
-    syncOptions:
-      - CreateNamespace=true
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
   generators:
     - plugin:
         configMapRef:
           name: secret-plugin-generator
         input:
           parameters:
-            secret_vars: ["ingress_host"]
+            env_vars: ["ingress_host"]
+  template:
+    metadata:
+      annotations:
+        argocd.argoproj.io/sync-wave: "-1"
+      name: argo-config
+      namespace: argocd
+    spec:
+      source:
+        repoURL: 'https://github.com/aledbf/progressivedelivery-masterclass.git'
+        targetRevision: main
+        path: "gitops/manifests/argo-config"
+      destination:
+        namespace: argocd
+        server: 'https://kubernetes.default.svc'
+      project: default
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
+        retry:
+          limit: 5
+          backoff:
+            duration: 5s
+            maxDuration: 3m0s
+            factor: 2
+        syncOptions:
+          - CreateNamespace=true
