--- a/gitops/applications/featureflags.yaml
+++ b/gitops/applications/featureflags.yaml
@@ -1,28 +1,42 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "4"
   name: featureflags
   namespace: argocd
 spec:
-  source:
-    repoURL: 'https://github.com/aledbf/progressivedelivery-masterclass.git'
-    targetRevision: main
-    path: "gitops/manifests/featureflags"
-  destination:
-    namespace: demo
-    server: 'https://kubernetes.default.svc'
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    retry:
-      limit: 5
-      backoff:
-        duration: 5s
-        maxDuration: 3m0s
-        factor: 2
-    syncOptions:
-      - CreateNamespace=true
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
+  generators:
+    - plugin:
+        configMapRef:
+          name: secret-plugin-generator
+        input:
+          parameters:
+            env_vars: ["ingress_host"]
+  template:
+    metadata:
+      annotations:
+        argocd.argoproj.io/sync-wave: "4"
+      name: featureflags
+      namespace: argocd
+    spec:
+      source:
+        repoURL: 'https://github.com/aledbf/progressivedelivery-masterclass.git'
+        targetRevision: main
+        path: "gitops/manifests/featureflags"
+      destination:
+        namespace: demo
+        server: 'https://kubernetes.default.svc'
+      project: default
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
+        retry:
+          limit: 5
+          backoff:
+            duration: 5s
+            maxDuration: 3m0s
+            factor: 2
+        syncOptions:
+          - CreateNamespace=true
