--- a/gitops/applications/keptn.yaml
+++ b/gitops/applications/keptn.yaml
@@ -1,28 +1,42 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
   name: keptn
   namespace: argocd
 spec:
-  source:
-    repoURL: 'https://charts.lifecycle.keptn.sh'
-    targetRevision: 0.2.5
-    chart: klt
-  destination:
-    namespace: keptn-lifecycle-toolkit-system
-    server: 'https://kubernetes.default.svc'
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    retry:
-      limit: 5
-      backoff:
-        duration: 5s
-        maxDuration: 3m0s
-        factor: 2
-    syncOptions:
-      - CreateNamespace=true
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
+  generators:
+    - plugin:
+        configMapRef:
+          name: secret-plugin-generator
+        input:
+          parameters:
+            env_vars: ["ingress_host"]
+  template:
+    metadata:
+      annotations:
+        argocd.argoproj.io/sync-wave: "2"
+      name: keptn
+      namespace: argocd
+    spec:
+      source:
+        repoURL: 'https://charts.lifecycle.keptn.sh'
+        targetRevision: 0.2.5
+        chart: klt
+      destination:
+        namespace: keptn-lifecycle-toolkit-system
+        server: 'https://kubernetes.default.svc'
+      project: default
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
+        retry:
+          limit: 5
+          backoff:
+            duration: 5s
+            maxDuration: 3m0s
+            factor: 2
+        syncOptions:
+          - CreateNamespace=true
