--- a/gitops/applications/openfeature-operator.yaml
+++ b/gitops/applications/openfeature-operator.yaml
@@ -1,34 +1,48 @@
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: ApplicationSet
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
   name: openfeature-operator
   namespace: argocd
 spec:
-  source:
-    repoURL: 'https://open-feature.github.io/open-feature-operator'
-    targetRevision: v0.2.36
-    chart: open-feature-operator
-  destination:
-    namespace: open-feature-operator-system
-    server: 'https://kubernetes.default.svc'
-  project: default
-  ignoreDifferences:
-  - group: "rbac.authorization.k8s.io"
-    kind: "ClusterRoleBinding"
-    jsonPointers:
-    - /subjects      
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    retry:
-      limit: 5
-      backoff:
-        duration: 5s
-        maxDuration: 3m0s
-        factor: 2
-    syncOptions:
-      - CreateNamespace=true
-      - RespectIgnoreDifferences=true
+  goTemplate: true
+  goTemplateOptions: ["missingkey=error"]
+  generators:
+    - plugin:
+        configMapRef:
+          name: secret-plugin-generator
+        input:
+          parameters:
+            env_vars: ["ingress_host"]
+  template:
+    metadata:
+      annotations:
+        argocd.argoproj.io/sync-wave: "2"
+      name: openfeature-operator
+      namespace: argocd
+    spec:
+      source:
+        repoURL: 'https://open-feature.github.io/open-feature-operator'
+        targetRevision: v0.2.36
+        chart: open-feature-operator
+      destination:
+        namespace: open-feature-operator-system
+        server: 'https://kubernetes.default.svc'
+      project: default
+      ignoreDifferences:
+      - group: "rbac.authorization.k8s.io"
+        kind: "ClusterRoleBinding"
+        jsonPointers:
+        - /subjects      
+      syncPolicy:
+        automated:
+          prune: true
+          selfHeal: true
+        retry:
+          limit: 5
+          backoff:
+            duration: 5s
+            maxDuration: 3m0s
+            factor: 2
+        syncOptions:
+          - CreateNamespace=true
+          - RespectIgnoreDifferences=true
