Refactor argocd secret and variable replacement

--- a/gitops/argo-secret-vars.yaml
+++ b/gitops/argo-secret-vars.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   labels:
     app.kubernetes.io/part-of: argocd
-type: stringData
-data:
+type: Opaque
+stringData:
   secret_vars.yaml: |
-    ingress_host: "ENCODED_WORKSPACE_ID"
+    ingress_host: "INGRESS_HOST"
