--- a/gitops/manifests/argo-config/ingress.yaml
+++ b/gitops/manifests/argo-config/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: argocd.{{.ingress_host}}
+  - host: argocd
     http:
       paths:
       - path: /
