--- a/gitops/manifests/demo-application/ingress.yaml
+++ b/gitops/manifests/demo-application/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: {{.ingress_host}}
+  - host: demoapp
     http:
       paths:
       - path: /
