--- a/gitops/manifests/jaeger-operator/jaeger.yaml
+++ b/gitops/manifests/jaeger-operator/jaeger.yaml
@@ -9,4 +9,4 @@ spec:
     annotations:
           kubernetes.io/ingress.class: nginx    
     hosts:
-      - jaeger.127.0.0.1.nip.io
+      - jaeger
