--- a/gitops/applications/demo-application.yaml
+++ b/gitops/applications/demo-application.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   goTemplate: true
   goTemplateOptions: ["missingkey=error"]
+  generators: []
   template:
     metadata:
       annotations:
