--- a/gitops/manifests/demo-application/demoapp-nodeport.yaml
+++ b/gitops/manifests/demo-application/demoapp-nodeport.yaml
@@ -4,10 +4,11 @@ metadata:
   name: demoapp-nodeport
   namespace: demo
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app.kubernetes.io/name: featuredemo
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
+      nodePort: 30103
