--- a/gitops/manifests/prometheus-grafana/grafana-nodeport.yaml
+++ b/gitops/manifests/prometheus-grafana/grafana-nodeport.yaml
@@ -10,10 +10,11 @@ metadata:
   name: grafana-nodeport
   namespace: monitoring
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: http
     port: 3000
+    nodePort: 30101
     protocol: TCP
     targetPort: http
   selector:
